# wimsey

./: 404.html  Makefile  README.md  example.yaml  index.html  mkdocs.yml  pyproject.toml  testing
.github/workflows/: build-docs.yml  release.yml  unit-tests.yml
building-tests/: index.html
cicd/: build-docs.yml
docs/: building-tests.md  generate_possible_tests.py  index.md  motivation.md  possible-tests.md  possible_tests.md  quick-start.md
docs/assets/: raw-size.csv
motivation/: index.html
possible-tests/: index.html
quick-start/: index.html
search/: search_index.json
tests/: test_config.py  test_dataframe.py  test_executions.py  test_profile.py  test_tests.py
wimsey/: __init__.py  config.py  dataframe.py  eg.py  execution.py  profile.py  tests.py
wimsey/dataframe/: core.py  dask.py  dynamic.py  pandas.py  polars.py  spark.py
wimsey/dev/: multiple_dfs.py
wimsey/testing/: suite.py  tests.py
