[project]
name = "wimsey"
version = "0.1.0"
description = "A lightweight data contracts framework"
authors = [
    { name = "Ben", email = "benrutter@posteo.net" }
]
dependencies = [
    "narwhals>=1.10.0",
    "fsspec>=2024.10.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipdb>=0.13.13",
    "ipython>=8.21.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true
